--- a/src/components/covid.css
+++ b/src/components/covid.css
@@ -106,7 +106,7 @@ h1{
     z-index: -1;
 }
 .portfolio .box-container .box1{
-    background: green;
+    background: orange;
 }
 .imgg{
     height:60vh;
